# github-cicd-template

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ICONS.md  README.md  SECURITY.md  VERSIONING.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: node.yml  python.yml  release-controller.yml  stale.yml  version-controller.yml
backend/: .pylintrc  pyproject.toml  requirements.txt
frontend/: package.json
scripts/: commit_msg_version_bump.py  format_yaml.py  format_yml.py  generate_changelog.py
