[tool.poetry]
name = "github-cicd-template"
version = "1.0.0"
description = "Github CICD Template Repository"
authors = ["B <g46327wsj1.marbling129@passinbox.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
pylint="^3.3.0"
bump2version="^1.0.0"
toml="^0.10.0"
black="^24.3.0"
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
coverage = "^7.2.5"
idna="^3.0"
certifi="^2024.8.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
